Add music to playlist added
